# SAAS

./: .gitignore
saas/: README.md  pyproject.toml
saas/example/: basic_fault.toml  sample_scenario.toml
saas/saas/: __main__.py
saas/saas/actuator/: __init__.py  rwa.py
saas/saas/controller/: __init__.py  orient.py
saas/saas/dynamics/: __init__.py  sixdofsc.py
saas/saas/environment/: __init__.py  earth.py  occlusion.py  sun.py
saas/saas/fs/: __init__.py  pointing.py  simple.py
saas/saas/metrics/: __init__.py  plots.py
saas/saas/power/: __init__.py  battery.py  solar.py
saas/saas/sensor/: __init__.py  imu.py  sru.py
saas/saas/structure/: __init__.py  rectangle.py
saas/saas/utility/: __init__.py  body.py  plotting.py  rotation.py  time.py
saas/saas/viz/: __init__.py  control.py  sixdofscopes.py
syssim/: README.md  pyproject.toml
syssim/example/step/: config.toml  run.py
syssim/example/step_fault/: basic_fault_config.toml  run.py
syssim/syssim/: __init__.py
syssim/syssim/core/: __init__.py  node.py  port.py  system.py
syssim/syssim/fault/: README.md  __init__.py  basic_fault.py
syssim/syssim/nodes/: dynamics.py  source.py  viz.py
